- tests modified - removed redundant public access identifier - added lock for thread-safe